--- a/gooey/package.json
+++ b/gooey/package.json
@@ -11,8 +11,10 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-minimal-pie-chart": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-simple-pie-chart": "^0.5.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
